# SLasH-DSA

./: .gitmodules  Cargo.toml  README.md  build.rs  hammer_all.sh
.cargo/: config.toml
config/: bs-config.json  fuzz-summary.json
swage/: .gitignore  Cargo.toml  Makefile  README.md
swage-victim-ossl-slh-dsa/: Cargo.toml  build.rs
swage-victim-ossl-slh-dsa/src/: config.rs  lib.rs  ossl_slh_dsa.rs
swage-victim-ossl-slh-dsa/victim/: .gitignore  Makefile  pk_SLH-DSA-SHA2-128f.pub  pk_SLH-DSA-SHA2-128s.pub  pk_SLH-DSA-SHA2-192f.pub  pk_SLH-DSA-SHA2-192s.pub  pk_SLH-DSA-SHA2-256f.pub  pk_SLH-DSA-SHA2-256s.pub  pk_SLH-DSA-SHAKE-128f.pub  pk_SLH-DSA-SHAKE-128s.pub  pk_SLH-DSA-SHAKE-192f.pub  pk_SLH-DSA-SHAKE-192s.pub  pk_SLH-DSA-SHAKE-256f.pub  pk_SLH-DSA-SHAKE-256s.pub  server.c  sk_SLH-DSA-SHA2-128f.key  sk_SLH-DSA-SHA2-128s.key  sk_SLH-DSA-SHA2-192f.key  sk_SLH-DSA-SHA2-192s.key  sk_SLH-DSA-SHA2-256f.key  sk_SLH-DSA-SHA2-256s.key  sk_SLH-DSA-SHAKE-128f.key  sk_SLH-DSA-SHAKE-128s.key  sk_SLH-DSA-SHAKE-192f.key  sk_SLH-DSA-SHAKE-192s.key  sk_SLH-DSA-SHAKE-256f.key  sk_SLH-DSA-SHAKE-256s.key
swage/.cargo/: config.toml
swage/.github/: copilot-instructions.md
swage/crates/allocators/swage-coco/: Cargo.toml
swage/crates/allocators/swage-coco/src/: coco.rs  lib.rs
swage/crates/allocators/swage-hugepage/: Cargo.toml
swage/crates/allocators/swage-hugepage/src/: hugepage.rs  hugepage_rnd.rs  lib.rs
swage/crates/allocators/swage-pfn/: Cargo.toml
swage/crates/allocators/swage-pfn/src/: lib.rs  pfn.rs
swage/crates/allocators/swage-spoiler/: Cargo.toml  build.rs
swage/crates/allocators/swage-spoiler/lib/spoiler/include/: misc.h  spoiler.h
swage/crates/allocators/swage-spoiler/lib/spoiler/src/: misc.c  spoiler.c
swage/crates/allocators/swage-spoiler/src/: lib.rs  spoiler.rs
swage/crates/allocators/swage-thp/: Cargo.toml
swage/crates/allocators/swage-thp/src/: lib.rs
swage/crates/hammerers/swage-blacksmith/: Cargo.toml
swage/crates/hammerers/swage-blacksmith/examples/: bank_order.rs
swage/crates/hammerers/swage-blacksmith/src/: blacksmith_config.rs  hammerer.rs  lib.rs
swage/crates/hammerers/swage-dev-mem/: Cargo.toml
swage/crates/hammerers/swage-dev-mem/src/: dev_mem.rs  lib.rs
swage/crates/hammerers/swage-dummy/: Cargo.toml
swage/crates/hammerers/swage-dummy/src/: dummy.rs  lib.rs
swage/crates/swage-core/: Cargo.toml
swage/crates/swage-core/examples/: pmapinfo.rs
swage/crates/swage-core/src/: allocator.rs  hammerer.rs  lib.rs  mem_check.rs  page_inject.rs  swage.rs  victim.rs
swage/crates/swage-core/src/memory/: consec_blocks.rs  dram_addr.rs  flippy_page.rs  mem_configuration.rs  memblock.rs  mod.rs  pfn_offset_resolver.rs  pfn_resolver.rs  timer.rs  virt_to_phys.rs
swage/crates/swage-core/src/util/: alloc_util.rs  cancelable_thread.rs  constants.rs  ipc.rs  mod.rs  named_progress.rs  rng.rs
swage/crates/swage-victim-dev-memcheck/: Cargo.toml
swage/crates/swage-victim-dev-memcheck/src/: dev_mem_check.rs  lib.rs
swage/src/: lib.rs
swage/swage-bin/: Cargo.toml
swage/tests/: integration_test.rs
swage/tools/: blacksmith_vis.ipynb
tools/: cryptanalysis.ipynb  cryptanalysis_lib.py  cryptanalysis_lib_c_sha2.py  cryptanalysis_ossl_slh_dsa_bindings.py  cryptanalysis_ossl_slhdsa.ipynb  cryptanalysis_sim.ipynb  cryptanalysis_worker.py  fips205.py  requirements.txt  spxplus.py
tools/hashbench/: .gitignore  Makefile  README.md  hashbench.c
