[package]
name = "swage-victim-ossl-slh-dsa"
version = "0.1.0"
edition = "2024"

[features]
sha2 = []
shake = []
128s = []
128f = []
192s = []
192f = []
256s = []
256f = []
det = []
rnd = []

[dependencies]
anyhow = { workspace = true }
const-str = "0.7"
hex = "0.4"
libc = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
swage = { workspace = true }

[build-dependencies.bindgen]
version = "0.72.1"
