[package]
name = "swage-bin"
version = "0.1.0"
edition = "2024"

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies.x86]
version = "0.52.0"
features = ["performance-counter"]

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
clap = { version = "4.3", features = ["derive"] }
rand = "0.9.2"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.99"
log = "0.4.0"
libc = { workspace = true }
env_logger = "0.11.5"
indicatif = "0.18.0"
indicatif-log-bridge = "0.2"

# Swage core
swage-core = { workspace = true }

# swage-allocators
swage-hugepage = { workspace = true }
swage-mmap = { workspace = true }
swage-spoiler = { workspace = true }
swage-pfn = { workspace = true }

# Swage-hammerers
swage-blacksmith = { workspace = true }