[package]
name = "swage-victim-dev-memcheck"
version = "0.2.0"
edition = "2024"
description = "DevMemCheck victim module for Swage."
repository = "https://github.com/UzL-ITS/swage"

[dependencies]
log = "0.4.0"
libc = "0.2.155"
serde = { version = "1.0", features = ["derive"] }

swage-core = { workspace = true }
thiserror = "2.0.16"