[package]
name = "swage-spoiler"
version = "0.2.0"
edition = "2024"
description = "SPOILER allocator module for Swage."
repository = "https://github.com/UzL-ITS/swage"

[features]
spoiler_dump = []

[dependencies]
indicatif = "0.18.0"
itertools = "0.14"
libc = "0.2"
log = "0.4.0"

swage-core = { workspace = true }
thiserror = "2.0.16"

[build-dependencies]
cc = "1.0"

[build-dependencies.bindgen]
version = "0.72.1"
